--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
               </div>
             </div>
           </div>
-
+          <button type="button" id="eminem" class="btn btn-outline-info">Eminem</button>
+          <button type="button" id="queen" class="btn btn-outline-info">Queen</button>
+          <button type="button" id="metallica" class="btn btn-outline-info">Metallica</button>
           <div class="nav-btn">
             <button class="btn signup-btn" type="button">Sign Up</button>
             <button class="btn login-btn" type="button">Login</button>
@@ -168,16 +170,17 @@
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-  </script>
+    </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
+    </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-  </script>
+    </script>
 
   <script>
   </script>
+  <script src="fetch.js"></script>
 </body>
 
 </html>
