--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
               </div>
             </div>
           </div>
-          <button type="button" id="eminem" class="btn btn-outline-info">Eminem</button>
-          <button type="button" id="queen" class="btn btn-outline-info">Queen</button>
-          <button type="button" id="metallica" class="btn btn-outline-info">Metallica</button>
+          <button type="button" id="btn-eminem" class="btn btn-outline-info ">Eminem</button>
+          <button type="button" id="btn-metallica" class="btn btn-outline-info ">Metallica</button>
+          <button type="button" id="btn-queen" class="btn btn-outline-info ">Queen</button>
           <div class="nav-btn">
             <button class="btn signup-btn" type="button">Sign Up</button>
             <button class="btn login-btn" type="button">Login</button>
