--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   </li>
                   <li>
                     <div class="input-group mt-3">
-                      <input type="text" class="form-control mb-2" id="searchField" placeholder="Search"
+                      <input type="text" class="form-control mb-2" id="searchField" placeholder="Search Your Music"
                         aria-label="Search" aria-describedby="basic-addon2" />
                       <div class="input-group-append" style="margin-bottom: 4%">
                         <button class="btn btn-outline-secondary btn-sm" type="button" id="button-search"
